add postgresql support

--- a/src/Benchmarks/appsettings.json
+++ b/src/Benchmarks/appsettings.json
@@ -1,3 +1,4 @@
 ﻿{
-  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-Benchmarks;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionString": "Server=10.194.232.96;Database=hello_world;User Id=benchmarkdbuser;Password=benchmarkdbpass",
+  "Database": "postgresql"
 }
